--- a/APControlCentre/APControlCentre.csproj
+++ b/APControlCentre/APControlCentre.csproj
@@ -155,6 +155,8 @@
     <Content Include="Resources\icoDashboardAlt.png" />
     <None Include="Resources\icoDashboard_small_Alt.png" />
     <Content Include="Resources\icoInfoAlt.png" />
+    <None Include="Resources\icoMaxmise.png" />
+    <None Include="Resources\icoRestore.png" />
     <Content Include="Resources\icoSettings_small.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
